--- a/filters/ptprince/ptdata/msi-graphicx.sty
+++ b/filters/ptprince/ptdata/msi-graphicx.sty
@@ -11,9 +11,12 @@
    \msitag{"/>}}
 
 \def\graphicspath#1{%
-  \msitag{<texb enc="1" name="graphicspath"><![CDATA[\graphicspath{#1}]]></texb>}
-  \msi@graphicspath{.}%
-  \msi@collectpath#1!}
+  %\msitag{<texb enc="1" name="graphicspath"><![CDATA[\graphicspath{#1}]]></texb>}
+  \expandafter\preambleToks\expandafter{\the\preambleToks^^0a\graphicspath{#1}}%
+  \begingroup\msi@inpreamble=0
+    \msi@graphicspath{.}%
+    \msi@collectpath#1!%
+  \endgroup}
 
 \def\msi@collectpath#1{%
    \def\tmp{#1}
