Work on 2378. Now seems to be an export bug.

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -606,7 +606,7 @@
 \MSIMathQuote{exists}
 \MSIMathQuote{exp}
 \MSIMathQuote{fallingdotseq}
-\MSIMathQuote{fbox}
+%\MSIMathQuote{fbox}
 %\MSIMathQuote{Finv}
 \MSIMathQuote{flat}
 \MSIMathQuote{forall}
