--- a/extensions/editor/cascades/resources/locale/en-US/EdCssProps.dtd
+++ b/extensions/editor/cascades/resources/locale/en-US/EdCssProps.dtd
@@ -36,7 +36,7 @@
    - ***** END LICENSE BLOCK ***** -->
 
 
-<!ENTITY Window.title						"CSS Stylesheets">
+<!ENTITY Window.title						"CSS Editor">
 
 <!ENTITY sheetsTreeColumn.label				"Sheets and rules">
 <!ENTITY expertModeChecbox.label			"Expert mode">
