Forced to commit in order to merge

--- a/prince/base/locale/en-us/dialogs/xrefDialog.dtd
+++ b/prince/base/locale/en-us/dialogs/xrefDialog.dtd
@@ -5,6 +5,8 @@
 <!ENTITY keyList.label "Key">
 <!ENTITY keyList.accesskey "K">
 <!ENTITY reftypeRadio.label "Print">
+<!ENTITY refVario.label "Use varioref">
+<!ENTITY refVario.accesskey "v">
 <!ENTITY reftypePageNumber.label "Page number">
 <!ENTITY reftypePageNumber.accesskey "p">
 <!ENTITY reftypeObjectCounter.label "Object counter">
