--- a/prince/base/locale/en-us/menuOverlay.dtd
+++ b/prince/base/locale/en-us/menuOverlay.dtd
@@ -376,7 +376,7 @@
 <!ENTITY increaseFontSize.label "Larger">
 <!ENTITY increasefontsize.accesskey "g">
 <!ENTITY increaseFontSize.keybinding "+">
-<!ENTITY increaseFontSize.keybinding2 "="> <!-- + is above this key on many keyboards -->
+<!-- ENTITY increaseFontSize.keybinding2 "=" --> <!-- + is above this key on many keyboards -->
 
 <!ENTITY fontsizeMenu.label "Size">
 <!ENTITY formatsizemenu.accesskey "z">
