Added an instruction line to the quantile dialog

--- a/prince/base/locale/en-us/compute.properties
+++ b/prince/base/locale/en-us/compute.properties
@@ -67,6 +67,7 @@ PowerSeries.termsdefault=<math xmlns=\"http://www.w3.org/1998/Math/MathML\"><mn>
 #####Quantile dialog
 Quantile.title=Statistics Quantile
 Quantile.label=Which Quantile:
+Quantile.description=The quantile must be between 0 and 1
 #####IntervalsAndAnimation dialog
 Intervals.XVar=x
 Intervals.YVar=y
