Changed 'Rule' to 'Line'

--- a/prince/base/locale/en-us/editor.properties
+++ b/prince/base/locale/en-us/editor.properties
@@ -1,4 +1,4 @@
-# LOCALIZATION NOTE FILE: embedded "\n" represent HTML breaks (<br>)
+p# LOCALIZATION NOTE FILE: embedded "\n" represent HTML breaks (<br>)
 # Don't translate embedded "\n".
 # Don't translate strings like this: %variable%
 #  as they will be replaced using JavaScript
@@ -206,7 +206,7 @@ msiFrame=Minipage
 
 HorizontalSpace=Horizontal Space
 VerticalSpace=Vertical Space
-Rule=Rule
+Rule=Line
 GenBreak=Generalized Break
 Fraction=Fraction
 Radical=Radical
