Various typos; didn't fix the problems yet.

--- a/prince/base/locale/en-us/dialogs/addruleforsection.dtd
+++ b/prince/base/locale/en-us/dialogs/addruleforsection.dtd
@@ -26,4 +26,4 @@
 <!ENTITY spaceHeight.accesskey	"H">
 <!ENTITY ruleColor.accesskey	"C">
 <!ENTITY vspaceWindowTitle.label	"Add Vertical Space">
-<!ENTITY  UnitsAre.label  "Units Are:">
+<!ENTITY UnitsAre.label  "Units are:">
