Tweak... set keyboard accelerator to O so it's the first character instead of in the middle of the second word (in Object counter).

--- a/prince/base/locale/en-us/dialogs/xrefDialog.dtd
+++ b/prince/base/locale/en-us/dialogs/xrefDialog.dtd
@@ -8,7 +8,7 @@
 <!ENTITY refVario.label "Use varioref">
 <!ENTITY refVario.accesskey "v">
 <!ENTITY reftypeObjectCounter.label "Object counter">
-<!ENTITY reftypeObjectCounter.accesskey "o">
+<!ENTITY reftypeObjectCounter.accesskey "O">
 <!ENTITY reftypePageNumber.label "Page number">
 <!ENTITY reftypePageNumber.accesskey "p">
 <!ENTITY keyList.tooltip  "Enter a key name">
