Deleted a stray character

--- a/prince/base/locale/en-us/editor.properties
+++ b/prince/base/locale/en-us/editor.properties
@@ -1,4 +1,4 @@
-p# LOCALIZATION NOTE FILE: embedded "\n" represent HTML breaks (<br>)
+# LOCALIZATION NOTE FILE: embedded "\n" represent HTML breaks (<br>)
 # Don't translate embedded "\n".
 # Don't translate strings like this: %variable%
 #  as they will be replaced using JavaScript
