Changed <marker> to <a>. Changed &FScr; (Fourier xform symbol) to an <mi>.

--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1314,7 +1314,7 @@
    \ifmmode
       \msitag{\label{#1}}%
    \else
-      \msihmode\msitag{<marker id="#1"/>}%
+      \msihmode\msitag{<a name="#1" key="#1" id="#1"/>}%
    \fi}
 
 \def\frac#1#2{\string\frac\@brace{#1}\@brace{#2}}
