Some work on tabular in math. Mostly to test new hg branch.

--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1011,10 +1011,11 @@
 \def\msi@closetabular{%
   \msiclosetag{tbody}{</tbody>}%
   \msiclosetag{table}{</table>}%
-  \msitag{<br type="_moz"/>}
-  \ifmathtabular
-    \msiclosetag{bodyText}{</bodyText>}%
-  \fi}
+}
+%  \msitag{<br type="_moz"/>}
+%  \ifmathtabular
+%    \msiclosetag{bodyText}{</bodyText>}%
+%  \fi}
 
 
 \def\msi@end@tabular{% 
