--- a/filters/ptprince/ptdata/msi-latexin.tex
+++ b/filters/ptprince/ptdata/msi-latexin.tex
@@ -729,14 +729,14 @@
 \edef\@qend{\expandafter\@cdr\string\end\@nil}
 \edef\@qrelax{\expandafter\@cdr\string\relax\@nil}
 \long\def\@ifnextchar#1#2#3{%
-  {\msi@output=1
+  \begingroup\msi@output=1
    \global\let\reserved@d=#1%
    \gdef\reserved@a{#2}%
    \gdef\reserved@b{#3}%
-  }
+  \endgroup%
   \futurelet\@let@token\@ifnch}
 \def\@ifnch{%
- {\msi@output=1
+ \begingroup\msi@output=1
   \ifx\@let@token\@sptoken
     \global\let\reserved@c\@xifnch
   \else
@@ -745,7 +745,7 @@
     \else
       \global\let\reserved@c\reserved@b
     \fi
-  \fi}
+  \fi\endgroup
   \reserved@c}
 \def\:{\let\@sptoken= } \:  % this makes \@sptoken a space token
 \def\:{\@xifnch} \expandafter\def\: {\futurelet\@let@token\@ifnch}
