Spacing and various

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -51,8 +51,11 @@
 \MSIEmptyElement[hspace type="italicCorrectionSpace"]{/}
 \MSIEmptyElement[hspace type="negativeThinSpace"]{!}
 \MSIEmptyElement[hspace type="noIndent"]{noindent}
-\MSIEmptyElement{qedhere}
+\MSIEmptyElement[vspace type="smallSkip" dim="3pt"]{smallskip}
+\MSIEmptyElement[vspace type="mediumSkip" dim="6pt"]{medskip}
+\MSIEmptyElement[vspace type="bigSkip" dim="12pt"]{bigskip}
 
+\MSIEmptyElement{qedhere}
 
 
 
@@ -717,7 +720,7 @@
 \MSIMathQuote{lvertneqq}
 \MSIMathQuote{maltese}
 \MSIMathQuote{mapsto}
-\MSIMathQuote{mathstrut}
+%\MSIMathQuote{mathstrut}
 \MSIMathQuote{max}
 \MSIMathQuote{measuredangle}
 \MSIMathQuote{mho}
