Work on horizontal spacing objects.

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -46,7 +46,7 @@
 \MSIEmptyElement[hspace type="emSpace"]{quad}
 \MSIEmptyElement[hspace type="twoEmSpace"]{qquad}
 \MSIEmptyElement[hspace type="thinSpace"]{,}
-\MSIEmptyElement[hspace type="medSpace"]{:}
+%\MSIEmptyElement[hspace type="medSpace" dim="0.5em"]{:}
 \MSIEmptyElement[hspace type="thickSpace"]{;}
 \MSIEmptyElement[hspace type="italicCorrectionSpace"]{/}
 \MSIEmptyElement[hspace type="negativeThinSpace"]{!}
