Fix \br problem in 2948 (changed all to \msi@br)

--- a/filters/ptprince/ptdata/msi-swugbk.sty
+++ b/filters/ptprince/ptdata/msi-swugbk.sty
@@ -25,10 +25,10 @@
 
 
 \def\msi@begin@GrayBox{\everypar={}\msihmode\msitag{^^0a^^0a}\msiopentag{GrayBox}{<GrayBox>}}
-\def\msi@end@GrayBox{\br\msiclosetag{GrayBox}{</GrayBox>}}
+\def\msi@end@GrayBox{\msi@br\msiclosetag{GrayBox}{</GrayBox>}}
 
 \def\msi@begin@Note{\everypar={}\msihmode\msitag{^^0a^^0a}\msiopentag{Note}{<Note>}}
-\def\msi@end@Note{\br\msiclosetag{Note}{</Note>}}
+\def\msi@end@Note{\msi@br\msiclosetag{Note}{</Note>}}
 
 
 
