--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -439,7 +439,7 @@
 
 \def\out@citey#1{%
   \ifmmode
-    \msitag{\msipassthru{<citation xmlns="http://www.w3.org/1999/xhtml citekey="#1" hasRemark="false"></citation>}}%
+    \msitag{\msipassthru{<citation xmlns="http://www.w3.org/1999/xhtml" citekey="#1" hasRemark="false"></citation>}}%
   \else
     \msiopentag{citation}{<citation xmlns="http://www.w3.org/1999/xhtml" 
                                     citekey="}#1\msitag{" hasRemark="false">}%
