Added BibTeX Log to the View menu. Made View TeX File, View TeX Log, and View BibTeX Log disabled whenever those files do not exist.

--- a/prince/base/locale/en-us/menuOverlay.dtd
+++ b/prince/base/locale/en-us/menuOverlay.dtd
@@ -145,6 +145,8 @@
 <!ENTITY viewShowHideMenu.accesskey "S" >
 <!ENTITY viewTeXLog.accesskey "L" >
 <!ENTITY viewTeXLog.label "TeX Log" >
+<!ENTITY viewBibTeXLog.accesskey "B" >
+<!ENTITY viewBibTeXLog.label "BibTeX Log" >
 <!ENTITY viewTeXFile.accesskey "F" >
 <!ENTITY viewTeXFile.label "TeX File" >
 <!ENTITY viewSidebars.label "Sidebars">
