Import \allowbreak in text mode.

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -57,7 +57,7 @@
 
 \MSIEmptyElement{qedhere}
 
-
+\MSIEmptyElement[msibreak type="allowBreak" invisDisplay="|"]{allowbreak}
 
 
 \MSIEmptyElement{nobreakspace}
@@ -456,7 +456,7 @@
 % pretex. 
 
 \MSIMathQuote{aleph}
-\MSIMathQuote{allowbreak}
+%(gp)%\MSIMathQuote{allowbreak}
 \MSIMathQuote{alpha}
 \MSIMathQuote{amalg}
 \MSIMathQuote{And}
