Match what interface does for discretionary hyphen; add nolinebreak and pagebreak.

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -41,7 +41,9 @@
 \MSIEmptyElement[leftquote]{textquotedblleft}
 \MSIEmptyElement[rightquote]{textquotedblright}
 \MSIEmptyElement{textbackslash}
-\MSIEmptyElement[discretionaryhyphen]{-}
+\MSIEmptyElement[msibreak type="discretionaryHyphen" invisDisplay="-"]{-}
+\MSIEmptyElement[msibreak type="noBreak" invisDisplay="~"]{nolinebreak}
+\MSIEmptyElement[msibreak type="pageBreak"]{pagebreak}
 \MSIEmptyElement[asterisk]{*}
 \MSIEmptyElement[hspace type="emSpace"]{quad}
 \MSIEmptyElement[hspace type="twoEmSpace"]{qquad}
