Have pagebreak behave similarly to newpage.

--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1317,6 +1317,7 @@
 
 
 
+\def\pagebreak{\msitag{<msibreak type="pageBreak"><newPageRule/></msibreak>}}
 \def\newpage{\msitag{<msibreak type="newPage"><newPageRule/></msibreak>}}
 
 \def\hfil{<hspace type="customSpace" class="stretchySpace"flex="1" atEnd="true"/>}
