Making description and bibliography lists look better

--- a/prince/base/locale/en-us/dialogs/typesetBibitemDlg.dtd
+++ b/prince/base/locale/en-us/dialogs/typesetBibitemDlg.dtd
@@ -2,9 +2,9 @@
 
 <!ENTITY windowTitle.label "Bibliography Item">
 
-<!ENTITY keyCaption.label "Key:">
+<!ENTITY keyCaption.label "Key">
 <!ENTITY keyCaption.accesskey "K">
-<!ENTITY labelCaption.label "Label:">
+<!ENTITY labelCaption.label "Label">
 <!ENTITY labelCaption.accesskey "L">
 
 <!-- <!ENTITY .tooltip "">  -->
